@@ -50,7 +50,7 @@ public abstract class JoinOperators implements IOperator {
             OperationErrorVerifier.noParentError(cell);
 
             errorType = OperationErrorType.SAME_SOURCE;
-            OperationErrorVerifier.haveDifferentSources(cell.getParents().getFirst(), cell.getParents().get(1));
+            OperationErrorVerifier.haveDifferentSources(cell.getParents().get(0), cell.getParents().get(1));
 
             errorType = null;
         } catch (TreeException exception) {
@@ -59,14 +59,14 @@ public abstract class JoinOperators implements IOperator {
 
         if (errorType != null) return;
 
-        Cell parentCell1 = cell.getParents().getFirst();
+        Cell parentCell1 = cell.getParents().get(0);
         Cell parentCell2 = cell.getParents().get(1);
 
         Operator operator1 = parentCell1.getOperator();
         Operator operator2 = parentCell2.getOperator();
 
         try {
-            BooleanExpression booleanExpression = new BooleanExpressionRecognizer(jCell).recognizer(arguments.getFirst());
+            BooleanExpression booleanExpression = new BooleanExpressionRecognizer(jCell).recognizer(arguments.get(0));
             Operator readyOperator = this.createJoinOperator(operator1, operator2, booleanExpression);
             String operationName = String.format("%s   %s", cell.getType().symbol, new BooleanExpressionRecognizer(jCell).recognizer(booleanExpression));
             Operation.operationSetter(cell, operationName, arguments, readyOperator);
